# pgdMLProject

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  todos.py
